fixed where x rotation is done

--- a/run.ipynb
+++ b/run.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,6 +10,14 @@
      "output_type": "stream",
      "text": [
       "CUDA is available on this machine.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dinple/Github/NNEvo/.conda/lib/python3.10/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: '/home/dinple/Github/NNEvo/.conda/lib/python3.10/site-packages/torchvision/image.so: undefined symbol: _ZN5torch3jit17parseSchemaOrNameERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEE'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
+      "  warn(\n"
      ]
     }
    ],
@@ -95,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +161,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90b08708f5d24b34a766a97aeea673ff",
+       "model_id": "f86bbaebadc74cdf9d38e6fafc7ffcd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -208,14 +216,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading model...\n"
+      "No model found, training...\n",
+      "[INFO] Epoch 0 Loss: 17.869232177734375\n",
+      "[INFO] Epoch 100 Loss: 0.6978635191917419\n",
+      "[INFO] Epoch 200 Loss: 0.41538310050964355\n",
+      "[INFO] Epoch 300 Loss: 0.3043254315853119\n",
+      "[INFO] Epoch 400 Loss: 0.2422059178352356\n",
+      "[INFO] Epoch 500 Loss: 0.20310631394386292\n",
+      "[INFO] Epoch 600 Loss: 0.1753838062286377\n",
+      "[INFO] Epoch 700 Loss: 0.15458011627197266\n",
+      "[INFO] Epoch 800 Loss: 0.1382167935371399\n",
+      "[INFO] Epoch 900 Loss: 0.12495817989110947\n",
+      "[INFO] Epoch 1000 Loss: 0.11385828256607056\n",
+      "[INFO] Epoch 1100 Loss: 0.10412281006574631\n",
+      "[INFO] Epoch 1200 Loss: 0.09569995105266571\n",
+      "[INFO] Epoch 1300 Loss: 0.08804720640182495\n",
+      "[INFO] Epoch 1400 Loss: 0.08113964647054672\n",
+      "[INFO] Epoch 1500 Loss: 0.07408293336629868\n",
+      "[INFO] Epoch 1600 Loss: 0.06785683333873749\n",
+      "[INFO] Epoch 1700 Loss: 0.06208575516939163\n",
+      "[INFO] Epoch 1800 Loss: 0.05710654333233833\n",
+      "[INFO] Epoch 1900 Loss: 0.05224774032831192\n",
+      "[INFO] Epoch 2000 Loss: 0.047730620950460434\n",
+      "[INFO] Epoch 2100 Loss: 0.04575468227267265\n",
+      "[INFO] Epoch 2200 Loss: 0.04006505012512207\n",
+      "[INFO] Epoch 2300 Loss: 0.03664536029100418\n",
+      "[INFO] Epoch 2400 Loss: 0.6276687979698181\n",
+      "[INFO] Epoch 2500 Loss: 0.04298132658004761\n",
+      "[INFO] Epoch 2600 Loss: 0.03324560075998306\n",
+      "[INFO] Epoch 2700 Loss: 0.02961416356265545\n",
+      "[INFO] Epoch 2800 Loss: 0.02689787931740284\n",
+      "[INFO] Epoch 2900 Loss: 0.024541625753045082\n",
+      "[INFO] Epoch 3000 Loss: 0.022416945546865463\n",
+      "[INFO] Epoch 3100 Loss: 0.02044370397925377\n",
+      "[INFO] Epoch 3200 Loss: 0.01857023313641548\n",
+      "[INFO] Epoch 3300 Loss: 0.016855992376804352\n",
+      "[INFO] Epoch 3400 Loss: 0.015232343226671219\n",
+      "[INFO] Epoch 3500 Loss: 0.013751289807260036\n",
+      "[INFO] Epoch 3600 Loss: 0.012355034239590168\n",
+      "[INFO] Epoch 3700 Loss: 0.011033473536372185\n",
+      "[INFO] Epoch 3800 Loss: 0.009818188846111298\n",
+      "[INFO] Epoch 3900 Loss: 0.008678433485329151\n",
+      "[INFO] Epoch 4000 Loss: 0.007640061434358358\n",
+      "[INFO] Epoch 4100 Loss: 0.00669383117929101\n",
+      "[INFO] Epoch 4200 Loss: 0.005800306331366301\n",
+      "[INFO] Epoch 4300 Loss: 0.005031283013522625\n",
+      "[INFO] Epoch 4400 Loss: 0.004361909814178944\n",
+      "[INFO] Epoch 4500 Loss: 0.0037719462998211384\n",
+      "[INFO] Epoch 4600 Loss: 0.0032728652004152536\n",
+      "[INFO] Epoch 4700 Loss: 0.0028543751686811447\n",
+      "[INFO] Epoch 4800 Loss: 0.0025083820801228285\n",
+      "[INFO] Epoch 4900 Loss: 0.002212108811363578\n",
+      "[INFO] Epoch 5000 Loss: 0.001960760448127985\n",
+      "[INFO] Epoch 5100 Loss: 0.0017399218631908298\n",
+      "[INFO] Epoch 5200 Loss: 0.0015514029655605555\n",
+      "[INFO] Epoch 5300 Loss: 0.001386367715895176\n",
+      "[INFO] Epoch 5400 Loss: 0.0012446653563529253\n",
+      "[INFO] Epoch 5500 Loss: 0.0011186625342816114\n",
+      "[INFO] Epoch 5600 Loss: 0.0010091025615110993\n",
+      "[INFO] Epoch 5700 Loss: 0.0009107286459766328\n",
+      "[INFO] Epoch 5800 Loss: 0.00082540197763592\n",
+      "[INFO] Epoch 5900 Loss: 0.0007481781649403274\n",
+      "[INFO] Epoch 6000 Loss: 0.0006804093718528748\n",
+      "[INFO] Epoch 6100 Loss: 0.0006195540772750974\n",
+      "[INFO] Epoch 6200 Loss: 0.0005651528481394053\n",
+      "[INFO] Epoch 6300 Loss: 0.0005166186601854861\n",
+      "[INFO] Epoch 6400 Loss: 0.0004727650957647711\n",
+      "[INFO] Epoch 6500 Loss: 0.00043325775186531246\n",
+      "[INFO] Epoch 6600 Loss: 0.0003978590830229223\n",
+      "[INFO] Epoch 6700 Loss: 0.0003654687316156924\n",
+      "[INFO] Epoch 6800 Loss: 0.0003359018883202225\n",
+      "[INFO] Epoch 6900 Loss: 0.000309169088723138\n",
+      "[INFO] Epoch 7000 Loss: 0.0002852275501936674\n",
+      "[INFO] Epoch 7100 Loss: 0.0002632574469316751\n",
+      "[INFO] Epoch 7200 Loss: 0.0002432043111184612\n",
+      "[INFO] Epoch 7300 Loss: 0.0002247544180136174\n",
+      "[INFO] Epoch 7400 Loss: 0.00020785894594155252\n",
+      "[INFO] Epoch 7500 Loss: 0.00019251616322435439\n",
+      "[INFO] Epoch 7600 Loss: 0.00017839102656580508\n",
+      "[INFO] Epoch 7700 Loss: 0.00016545504331588745\n",
+      "[INFO] Epoch 7800 Loss: 0.00015351100591942668\n",
+      "[INFO] Epoch 7900 Loss: 0.00014248672232497483\n",
+      "[INFO] Epoch 8000 Loss: 0.00013238286192063242\n",
+      "[INFO] Epoch 8100 Loss: 0.00012310406600590795\n",
+      "[INFO] Epoch 8200 Loss: 0.00011450247257016599\n",
+      "[INFO] Epoch 8300 Loss: 0.00010664965520845726\n",
+      "[INFO] Epoch 8400 Loss: 9.934812260325998e-05\n",
+      "[INFO] Epoch 8500 Loss: 9.258349018637091e-05\n",
+      "[INFO] Epoch 8600 Loss: 8.634552068542689e-05\n",
+      "[INFO] Epoch 8700 Loss: 8.056015940383077e-05\n",
+      "[INFO] Epoch 8800 Loss: 7.522027590312064e-05\n",
+      "[INFO] Epoch 8900 Loss: 7.025318336673081e-05\n",
+      "[INFO] Epoch 9000 Loss: 6.559571920661256e-05\n",
+      "[INFO] Epoch 9100 Loss: 6.131708505563438e-05\n",
+      "[INFO] Epoch 9200 Loss: 5.731627970817499e-05\n",
+      "[INFO] Epoch 9300 Loss: 5.362710726330988e-05\n",
+      "[INFO] Epoch 9400 Loss: 5.013676127418876e-05\n",
+      "[INFO] Epoch 9500 Loss: 4.6915029088268057e-05\n",
+      "[INFO] Epoch 9600 Loss: 4.389027526485734e-05\n",
+      "[INFO] Epoch 9700 Loss: 4.1054434404941276e-05\n",
+      "[INFO] Epoch 9800 Loss: 3.844864113489166e-05\n",
+      "[INFO] Epoch 9900 Loss: 3.60232443199493e-05\n"
      ]
     }
    ],
@@ -241,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -249,13 +357,13 @@
      "output_type": "stream",
      "text": [
       "[INFO] Evaluating on original data...\n",
-      "     Accuracy:  0.9928571428571429\n",
+      "     Accuracy:  0.9357142857142857\n",
       "[INFO] Evaluating on data rotated by 90 degrees...\n",
-      "     Accuracy:  0.11428571428571428\n",
+      "     Accuracy:  0.9714285714285714\n",
       "[INFO] Evaluating on data rotated by 180 degrees...\n",
-      "     Accuracy:  0.2714285714285714\n",
+      "     Accuracy:  0.9428571428571428\n",
       "[INFO] Evaluating on data rotated by 270 degrees...\n",
-      "     Accuracy:  0.1357142857142857\n"
+      "     Accuracy:  0.9357142857142857\n"
      ]
     }
    ],
